added logger class and some tweaks to ensure it's working right. need to remove prints...

--- a/config.json
+++ b/config.json
@@ -2,6 +2,9 @@
     "core":
         {
             // base_interval is in seconds
-            "base_interval": 15
+            "base_interval": 15,
+            "log": {
+                "level": "debug"
+            }
         }
 }
