--- a/config.json
+++ b/config.json
@@ -13,12 +13,12 @@
         {
             "dir": "badger_modules",
             "config": "badger_modules/conf.d",
-            "included_modules": ["system"]
+            "included_modules": ["system", "load", "cpu"]
         },
     "emitters":
         {
             "dir": "badger_emitters",
             "config": "badger_emitters/conf.d",
-            "included_emitters": ["stdout_pretty"]
+            "included_emitters": ["influxdb_emitter"]
         }
 }
