added cpu util and some other cpu metrics. tweaks all 'round. hacky fix for interval passing. Need to implement per-module configs next...

--- a/config.json
+++ b/config.json
@@ -19,6 +19,6 @@
         {
             "dir": "badger_emitters",
             "config": "badger_emitters/conf.d",
-            "included_emitters": ["influxdb_emitter"]
+            "included_emitters": ["stdout_pretty"]
         }
 }
