started to implement per-module/emitter configs, but bailed. Need to rethink that structure. For now work on getting things workable < 1s and work on async emitters. Started work on a diskstats module.

--- a/config.json
+++ b/config.json
@@ -13,7 +13,7 @@
         {
             "dir": "badger_modules",
             "config": "badger_modules/conf.d",
-            "included_modules": ["system", "load", "cpu"]
+            "included_modules": ["diskstats"]
         },
     "emitters":
         {
