--- a/config.json
+++ b/config.json
@@ -13,7 +13,7 @@
         {
             "dir": "badger_modules",
             "config": "badger_modules/conf.d",
-            "included_modules": ["diskstats"]
+            "included_modules": ["load"]
         },
     "emitters":
         {
