added influxdb_emitter connection config info. moved client instantiation to constructor to avoid repeated instantiation in every get_metrics() call

--- a/badger_emitters/conf.d/influxdb_emitter.conf
+++ b/badger_emitters/conf.d/influxdb_emitter.conf
@@ -1,3 +1,8 @@
 {
-    "blacklist": []
+    "blacklist": [],
+    "host": "10.2.10.20",
+    "port": 8086,
+    "database": "codytest",
+    "user": "test",
+    "pass": "test"
 }
