added disk name whitelist to diskstats config and appropriate handling in the module. rearranged some goofy code in diskstats module too.

--- a/config.json
+++ b/config.json
@@ -23,7 +23,7 @@
         {
             "dir": "badger_modules",
             "config": "badger_modules/conf.d",
-            "included_modules": ["load", "cpu", "diskstats"]
+            "included_modules": ["system", "load", "cpu", "diskstats"]
         },
     "emitters":
         {
