--- a/badger_modules/conf.d/diskstats.conf
+++ b/badger_modules/conf.d/diskstats.conf
@@ -1,4 +1,9 @@
 {
     "interval": 0,
-    "blacklist": []
+    "blacklist": [],
+    /* leave disks_to_check empty to grab stats for all devices listed
+       in /proc/diskstats. Be warned it's probably not what you really
+       want, it's awfully chatty. Need to make this accept wildcards, 
+       but for now it's just a list of disks */
+    "disks_to_check": ["sda", "nbd8", "nbd9"]
 }
