--- a/config.json
+++ b/config.json
@@ -23,12 +23,12 @@
         {
             "dir": "badger_modules",
             "config": "badger_modules/conf.d",
-            "included_modules": ["system", "load", "cpu", "disk", "network", "memory"]
+            "included_modules": ["load"]
         },
     "emitters":
         {
             "dir": "badger_emitters",
             "config": "badger_emitters/conf.d",
-            "included_emitters": ["influxdb_emitter"]
+            "included_emitters": ["graphite_emitter"]
         }
 }
