--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "core":
         {
             /* base_interval is in seconds */
-            "base_interval": 1,
+            "interval": 1,
             /* keep these values present with empty strings if they are not
                applicable - deliverable payload expects them to be present,
                even if not populated */
@@ -23,12 +23,13 @@
         {
             "dir": "badger_modules",
             "config": "badger_modules/conf.d",
-            "included_modules": ["load"]
+            "included_modules": ["load", "system", "cpu", "disk", "network"]
         },
     "emitters":
         {
             "dir": "badger_emitters",
             "config": "badger_emitters/conf.d",
-            "included_emitters": ["graphite_emitter"]
+            "workers": 3,
+            "included_emitters": ["graphite_emitter", "influxdb_emitter"]
         }
 }
