--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "core":
         {
-            /* base_interval is in seconds */
+            /* base_interval is in seconds - decimal values accepted */
             "interval": 1,
             /* keep these values present with empty strings if they are not
                applicable - deliverable payload expects them to be present,
@@ -30,6 +30,6 @@
             "dir": "badger_emitters",
             "config": "badger_emitters/conf.d",
             "workers": 3,
-            "included_emitters": ["graphite_emitter", "influxdb_emitter"]
+            "included_emitters": ["influxdb_emitter"]
         }
 }
