--- a/badger_emitters/conf.d/graphite_emitter.conf
+++ b/badger_emitters/conf.d/graphite_emitter.conf
@@ -1,4 +1,5 @@
 {
+    "interval": 0,
     "blacklist": [],
     "host": "127.0.0.1",
     // This should be the port that will accept bulk updates (likely 2004)
