--- a/badger_emitters/conf.d/influxdb08_emitter.conf
+++ b/badger_emitters/conf.d/influxdb08_emitter.conf
@@ -1,9 +1,9 @@
 {
     "interval": 0,
     "blacklist": [],
-    "host": "10.2.10.20",
+    "host": "127.0.0.1",
     "port": 8086,
-    "database": "codytest",
+    "database": "test",
     "user": "test",
     "pass": "test"
 }
