--- a/badger_emitters/conf.d/influxdb08_emitter.conf
+++ b/badger_emitters/conf.d/influxdb08_emitter.conf
@@ -1,17 +1,9 @@
 {
     "interval": 0,
     "blacklist": [],
-    "host": "10.2.10.20",
+    "host": "127.0.0.1",
     "port": 8086,
-    "database": "codytest",
+    "database": "test",
     "user": "test",
-    "pass": "test",
-    /* a custom prefix can be handy in InfluxDB to help take
-        advantage of continuous queries and shard space retention
-        policies for downsampling. for instance, I like to prefix
-        my base stats with '1s.', then run CQs that downsample to
-        series that start with '1m.', '5m.', etc. Having this
-        base prefix in place makes it much easier to use templates
-        in Grafana to choose your resolution */
-    "prefix": "1s."
+    "pass": "test"
 }
