changed disk and network module configs to make lists easier to define in config management tools. rendering arrays tends to suck in CM

--- a/badger_modules/conf.d/disk.conf
+++ b/badger_modules/conf.d/disk.conf
@@ -5,5 +5,5 @@
        in /proc/diskstats. Be warned it's probably not what you really
        want, it's awfully chatty. Need to make this accept wildcards, 
        but for now it's just a list of disks */
-    "disks_to_check": ["sda", "nbd8", "nbd9"]
+    "disks_to_check": "sda,nbd8,nbd9"
 }
