fixed bug in process_stats.proc_ctxt() that was causing KeyError exceptions when processes disappeared

--- a/badger_emitters/conf.d/influxdb08_emitter.conf
+++ b/badger_emitters/conf.d/influxdb08_emitter.conf
@@ -1,9 +1,9 @@
 {
     "interval": 0,
     "blacklist": [],
-    "host": "127.0.0.1",
+    "host": "10.2.10.22",
     "port": 8086,
-    "database": "test",
-    "user": "test",
-    "pass": "test"
+    "database": "system_stats",
+    "user": "fds1505",
+    "pass": "fds1505"
 }
