--- a/config.json
+++ b/config.json
@@ -4,15 +4,15 @@
             /* keep these values present with empty strings if they are not
                applicable - deliverable payload expects them to be present,
                even if not populated */
-            "datacenter": "ec2",
-            "region": "us-west-1",
-            "zone": "us-west-1a",
-            "cluster": "foobar",
-            "hostname": "baz",
+            "datacenter": "bld",
+            "region": "",
+            "zone": "",
+            "cluster": "test",
+            "hostname": "cody-dev",
             "ipv4": "192.168.2.15",
             "ipv6": "",
             "log": {
-                "dest": "file",
+                "dest": "",
                 "fileName": "badger.log",
                 "level": "debug"
             }
@@ -21,12 +21,12 @@
         {
             "dir": "badger_modules",
             "config": "badger_modules/conf.d",
-            "included_modules": ["load", "system", "cpu", "disk", "network", "memory"]
+            "included_modules": ["load", "system", "cpu", "disk", "network", "memory", "process_stats"]
         },
     "emitters":
         {
             "dir": "badger_emitters",
             "config": "badger_emitters/conf.d",
-            "included_emitters": ["stdout_pretty"]
+            "included_emitters": ["influxdb08_emitter"]
         }
 }
