--- a/config.json
+++ b/config.json
@@ -27,6 +27,6 @@
         {
             "dir": "badger_emitters",
             "config": "badger_emitters/conf.d",
-            "included_emitters": ["influxdb08_emitter"]
+            "included_emitters": ["stdout_pretty"]
         }
 }
