fix stock influxdb emitter to be generic instead of my dev environment-specific

--- a/badger_emitters/conf.d/influxdb08_emitter.conf
+++ b/badger_emitters/conf.d/influxdb08_emitter.conf
@@ -1,9 +1,9 @@
 {
     "interval": 0,
     "blacklist": [],
-    "host": "10.2.10.22",
+    "host": "127.0.0.1",
     "port": 8086,
     "database": "system_stats",
-    "user": "fds1505",
-    "pass": "fds1505"
+    "user": "test",
+    "pass": "test"
 }
